--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,9 @@ a {
   color: #000;
 }
 
-
 /* ******** HEADER ********** */
-
 .header {
   position: relative;
-  /* padding: 8px 0 26px; */
   margin-bottom: 60px;
   width: 100%;
   background-image: url(../images/banner-bg.jpg);
@@ -107,9 +104,9 @@ a {
 }
 
 .menu-list-item {
+  font-size: 13px;
   list-style: none;
   text-transform: uppercase;
-  font-size: 13px;
 }
 
 .menu-list-item:not(:last-child) {
@@ -142,8 +139,8 @@ a {
 
 .header-text {
   margin-bottom: 26px;
-  font-size: 1.67em;
   font-family: open-sans-bold, Arial, sans-serif;
+  font-size: 1.67em;
   text-transform: uppercase;
   line-height: 1.2;
 }
@@ -167,6 +164,7 @@ a {
   background: #b59f5b;
 }
 
+/* ******** TRENDS ********** */
 .trends-inner {
   display: flex;
   flex-wrap: wrap;
@@ -215,15 +213,15 @@ a {
 }
 
 .trends-description {
-  border: 3px solid #b59f5b;
   width: 90%;
   margin-bottom: 18px;
   padding: 35px;
+  border: 3px solid #b59f5b;
 }
 
 .header-trends {
-  color: #ffffff;
   margin-bottom: 0;
+  color: #ffffff;
 }
 
 .content-inner {
@@ -233,15 +231,16 @@ a {
   padding: 0 10px;
 }
 
+/* ******** ARTICLE ********** */
 .content-main {
   width: 65%;
 }
 
 .article {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: wrap;
   width: 100%;
   margin-bottom: 60px;
 }
@@ -301,9 +300,7 @@ a {
   line-height: 1.5;
 }
 
-
 /* ******** ASIDE ********** */
-
 .content-aside {
   width: 276px;
 }
@@ -331,9 +328,9 @@ a {
 
 .form-search {
   display: flex;
+  align-items: center;
   width: 100%;
   height: 49px;
-  align-items: center;
 }
 
 .search-group {
@@ -408,10 +405,10 @@ a {
   height: 48px;
   width: 100%;
   border: none;
+  font-family: open-sans-bold, Arial, sans-serif;
   font-size: 14px;
-  color: #ffffff;
   text-transform: uppercase;
-  font-family: 'open-sans-bold';
+  color: #ffffff;
   background-color: #b59f5b;
 }
 
@@ -429,8 +426,8 @@ a {
   margin-bottom: 5px;
   padding: 2px 12px;
   list-style: none;
-  text-transform: uppercase;
   font-family: open-sans-bold, Arial, sans-serif;
+  text-transform: uppercase;
   border: 3px solid #EEEEEE;
   background-color: rgba(244, 243, 241, 0);
 }
@@ -446,7 +443,7 @@ a {
 .themes-item {
   width: 100%;
   list-style: none;
-  font-family: "open-sans-bold", Arial, sans-serif;
+  font-family: open-sans-bold, Arial, sans-serif;
 }
 
 .themes-item:not(:last-child) {
@@ -475,10 +472,11 @@ a {
 .theme-count {
   vertical-align: super;
   margin-left: 3px;
-  font-family: "open-sans-bold", Arial, sans-serif;
+  font-family: open-sans-bold, Arial, sans-serif;
   color: #b59f5b;
 }
 
+/* ******** SHOP ********** */
 .shop {
   margin-bottom: 80px;
 }
@@ -521,9 +519,7 @@ a {
   width: 141px;
 }
 
-
 /* ******** FOOTER ********** */
-
 .footer-address {
   background-color: #f4f7f6;
 }
@@ -553,35 +549,34 @@ a {
 }
 
 .social-icon_twitter {
-  background-image: url("../svg/004-twitter.svg");
+  background-image: url(../svg/004-twitter.svg);
 }
 
 .social-icon_pinterest {
-  background-image: url("../svg/001-pinterest.svg");
+  background-image: url(../svg/001-pinterest.svg);
 }
 
 .social-icon_facebook {
-  background-image: url("../svg/002-facebook-logo.svg");
+  background-image: url(../svg/002-facebook-logo.svg);
 }
 
 .social-icon_instagram {
-  background-image: url("../svg/005-instagram.svg");
+  background-image: url(../svg/005-instagram.svg);
 }
 
 .social-icon_tumblr {
-  background-image: url("../svg/003-tumblr.svg");
+  background-image: url(../svg/003-tumblr.svg);
 }
 
 .copyright {
   display: block;
   padding: 74px 0 40px;
-  font-family: "open-sans-bold", Arial, sans-serif;
+  font-family: open-sans-bold, Arial, sans-serif;
   text-align: center;
   color: #999999;
 }
 
 /* ******** POPUP ********** */
-
 .popup {
   visibility: hidden;
   display: flex;
@@ -604,7 +599,6 @@ a {
 
 .form {
   display: block;
-  /* order: 100; */
 }
 
 .form-row {
@@ -663,7 +657,7 @@ a {
   margin-right: 5px;
   width: 15px;
   height: 15px;
-  background-image: url("../svg/form-empty-circle.svg");
+  background-image: url(../svg/form-empty-circle.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 15px;
@@ -677,7 +671,7 @@ a {
 }
 
 .radio:checked~.radio-group-text::before {
-  background-image: url("../svg/form-circle.svg");
+  background-image: url(../svg/form-circle.svg);
 }
 
 .field {
@@ -775,9 +769,9 @@ textarea:focus {
 
 @media (max-width: 767px) {
   .header {
+    margin-bottom: 40px;
     padding-top: 0;
     background-image: url(../images/banner-mobile.jpg);
-    margin-bottom: 40px;
   }
 
   .header-navigation {
